# cqi-2025

./: 404.html  CNAME  Dockerfile  Dockerfile.client  Dockerfile.server  LICENSE  README.md  app.py  board.py  bot.py  client.sh  compose.yml  docker-compose.yml  game.py  index.html  piece.py  player.py  requirements.txt  server.sh
.devcontainer/: devcontainer.json
assets/: index-2SivJm0-.js  index-6Bb3EoeA.js  index-775LwTTE.js  index-7X2THVNw.js  index-B3GdRvhx.js  index-BEqhbzq8.js  index-BPCZw4M0.js  index-BQMuZYJS.js  index-BcprpWg9.css  index-BfYjW42Z.js  index-Bl34Y4Sk.css  index-Bp1s2fuD.js  index-BqrHs57z.js  index-BzSlEIX0.js  index-C5JUj8Qd.js  index-CB1it4TN.js  index-CF1AWUzC.js  index-CMWV4Fbh.js  index-COeSQo-3.js  index-CTgnkVsp.js  index-CYVGLHxg.js  index-CfThQHbw.js  index-CmqedueN.js  index-Cpgc_xe1.js  index-DMr4LJEk.js  index-DNZhsJD-.js  index-DRr0CpgI.js  index-Dbc8LMcc.js  index-DdMAiM1r.js  index-Hs1LhcfY.js  index-MpL-nngL.js  index-O9OmT4u6.js  index-VlWBX5ec.js  index-cGmfjiOs.js  index-h1SZkZJi.js  index-qBXIXdFT.js  index-yiXbf3uK.css
client/: main.py
cqi/: .gitignore  README.md  compose.base.yml  compose.test.yml  compose.yml  requirements.txt  start-game.py
pre-cqi/: .gitignore  Dockerfile  README.md  app.py  board.py  bot.py  compose.yml  decode.sh  game.py  generate_samples.py  grade.py  piece.py  piece_shapes.py  player.py  requirements.txt  start.sh
pre-cqi/demo_bot/: Cargo.toml  Dockerfile  README.md
pre-cqi/demo_bot/src/: main.rs  map.rs  piece.rs  server.rs
server/: app.py
src/: board.py  game.py  peice.py  player.py
(+1159 files in other folders)
