[package]
name = "pre-cqi"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
concat_const = "0.1.3"
image = { version = "0.25.2", features = ["png"] }
reqwest = { version = "0.12.7", features = [
    "blocking",
    "json",
], default-features = false }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
